# alg-analysis-lab

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bellman-ford.cpp  generator.cpp  main.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp
tests/: CMakeLists.txt  bellman-ford-test.cpp
tex/: data2.csv  data_and_regression.pdf_tex  main.tex  output.csv  results.csv  results_diff.csv
