cmake_minimum_required(VERSION 3.15)
project(algorithm-analysis)

add_subdirectory(src)
include_directories(src)
link_directories(benchmark extern/benchmark/build/src/)
add_subdirectory(src/benchmark)
add_subdirectory(extern/benchmark)

#option(PACKAGE_TESTS "Build the tests" ON)
#if(PACKAGE_TESTS)
#    enable_testing()
#    include(GoogleTest)
#    add_subdirectory(tests)
#endif()
